# aprendiendo

./: format.py  intro.py
Backend_bases/: dia_01.js  plant_de_estudio.txt
Git/: git.ts
Introducción al Backend/semana1/: dia_1.ts
Node/: 1.os-info.js  2.fs-stat.js  3.fs-promises.js  3.fs-readFile-sync.js  3.fs-readFile.js  4.fs-async-await-parallel.js  4.fs-async-await.js  4.fs-async-await.mjs  4.fs-promises.js  5.path.js  6.ls.js  7.process.js  8.ls-advanced.js  9.http.js  archivo2.txt  package-lock.json  package.json
Node/cjs/: index.js  sum.js
Node/mjs/: index.mjs
Plan_de_Estudio_JavaScript_POO_y_Buenas_Practicas/Semana_1_Algoritmos/: dia_1.js  dia_2.js  dia_3.js  dia_4.js  dia_5.js  practicas.js
Plan_de_Estudio_JavaScript_POO_y_Buenas_Practicas/Semana_2_Estructuras_de_Datos/: dia_1.js  dia_2.js  dia_3.js  dia_4.js  dia_5.js
SQL/: INSERT_INTO.JS  SELECT.js  UPDATE.js  index.js
control-flujo/: 02-if.py  03-if-ternario.py  04-operadores-logicos.py  05-cadena-comparadores.py  06-for.py  07-while.py  08-loop-anidado.py
ejercicios/: calculadora.py  carlcularo2.py  esPalindromo.py
funciones/: 01-funciones.py  02-xargs.py  03-kwargs.py  04-return.py  05-alcance.py  06-depuracion.py
php/: hello_world.php
rust/video_tutorial_4horas/axum_tokio_sqlx/user_api/: Cargo.toml
rust/video_tutorial_4horas/axum_tokio_sqlx/user_api/src/: main.rs
rust/video_tutorial_4horas/axum_tokio_sqlx/user_api/src/db/: conexion.rs  mod.rs
rust/video_tutorial_4horas/axum_tokio_sqlx/user_api/src/handlers/users/: mod.rs
rust/video_tutorial_4horas/axum_tokio_sqlx/user_api/src/models/: user.rs
rust/video_tutorial_4horas/practicas/organizador_archivos/: Cargo.toml
rust/video_tutorial_4horas/practicas/organizador_archivos/src/: main.rs
rust/video_tutorial_4horas/proyectos/trading_bot_api/: Cargo.toml
tipos/: 01-variables.py  02-strings.py  03-format-strings.py  04-metodos-strings.py  05-secuencias-escape.py  06-numeros.py  07-numeros-funciones.py  08-conversion-tipos.py
tipos-avanzados/: 01-tipos.py  02-manipulando-listas.py  03-desempaquetar-listas.py  04-iterar-listas.py  05-buscar-elemento.py  06-agregando-eliminando.py  07-ordenando-listas.py  08-comprension-listas.py
(+244 files in other folders)
