[package]
name = "trading_bot_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Runtime asincrono
tokio =  {version = "1.45.1", features = ["full"] }

# Http framework
axum = "0.8.4"

# Base de datos PosgreSQL
sqlx = { version = "0.8.6",  features = ["runtime-tokio-rustls","postgres","macros"] }

# Serealizacion json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging estructurado
tracing = "0.1"
tracing-subscriber = "0.3"

# variables de entorno
dotenv = "0.15"

# IDs unicos
uuid = { version = "1", features = ["v4","serde"]}